--- a/Main/wndMain.xaml
+++ b/Main/wndMain.xaml
@@ -8,24 +8,32 @@
         Title="Invoice Home" Height="450" Width="800">
     <Grid Margin="0,0,0,1">
         <Menu>
-            <MenuItem x:Name="menuSearchInvoice" Header="Search Invoice" HorizontalAlignment="Right" FontSize="14" Click="menuSearchInvoice_Click" BorderBrush="{x:Null}" Background="#FFA5A9FF" />
+            <MenuItem x:Name="menuSearchInvoice" Header="Search Invoice" HorizontalAlignment="Center" FontSize="14" Click="menuSearchInvoice_Click" BorderBrush="{x:Null}" Background="#FFA5A9FF" HorizontalContentAlignment="Center" />
             <MenuItem x:Name="menuItemListMenu" HorizontalAlignment="Right" Header="Item List" FontSize="14" Click="menuItemListMenu_Click" Background="#FF8085F7" />
+
+
         </Menu>
 
-        <Button x:Name="btnAddInvoice" Content="Add Invoice" Margin="42,57,649,309"/>
-        <Button x:Name="btnEditInvoice" Content="Edit Invoice" Margin="42,131,649,235"/>
-        <Button x:Name="btnDeleteInvoice" Content="Delete Invoice" Margin="42,206,649,160"/>
+        <Button x:Name="btnAddInvoice" Content="Add Invoice" Margin="42,57,649,309" Click="btnAddInvoice_Click"/>
+        <Button x:Name="btnEditInvoice" Content="Edit Invoice" Margin="42,131,649,235" Click="btnEditInvoice_Click"/>
+        <Button x:Name="btnDeleteInvoice" Content="Delete Invoice" Margin="42,206,649,160" Click="btnDeleteInvoice_Click"/>
 
-        <ListBox HorizontalAlignment="Left" Height="201" Margin="191,57,0,0" VerticalAlignment="Top" Width="427"/>
+        <ListBox x:Name="lbItems" HorizontalAlignment="Left" Height="201" Margin="191,57,0,0" VerticalAlignment="Top" Width="427"/>
         <Label Content="Invoice #: " HorizontalAlignment="Left" Margin="233,18,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblInvoiceNumber" Content="" HorizontalAlignment="Left" Margin="290,18,0,0" VerticalAlignment="Top"/>
         <Label Content="Date: " HorizontalAlignment="Left" Margin="422,18,0,0" VerticalAlignment="Top"/>
         <Label Content="Invoice Total: " HorizontalAlignment="Left" Margin="638,232,0,0" VerticalAlignment="Top"/>
-        <Button Content="Add Item" HorizontalAlignment="Left" Margin="495,285,0,0" VerticalAlignment="Top" Width="123" Height="38"/>
+        <Label x:Name="lblInvoiceTotal" Content="" HorizontalAlignment="Left" Margin="710,232,0,0" VerticalAlignment="Top" Width="59"/>
+        <Label x:Name="lblPrice" Content="" HorizontalAlignment="Left" Margin="385,278,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnAddItem" Content="Add Item" HorizontalAlignment="Left" Margin="495,285,0,0" VerticalAlignment="Top" Width="123" Height="38" Click="btnAddItem_Click"/>
         <Button Content="Delete Item" HorizontalAlignment="Left" Margin="638,77,0,0" VerticalAlignment="Top" Width="75" Height="32"/>
-        <Button Content="Save" HorizontalAlignment="Left" Margin="638,361,0,0" VerticalAlignment="Top" Width="120" Height="32"/>
-        <ComboBox HorizontalAlignment="Left" Margin="191,278,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Price: $ " HorizontalAlignment="Left" Margin="329,278,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnSaveInvoice"  Content="Save" HorizontalAlignment="Left" Margin="638,361,0,0" VerticalAlignment="Top" Width="120" Height="32"/>
+        <ComboBox x:Name="cbItems" HorizontalAlignment="Left" Margin="191,278,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbItems_SelectionChanged"/>
+        <Label Content="Price: " HorizontalAlignment="Left" Margin="329,278,0,0" VerticalAlignment="Top"/>
         <Label Content="Quantity: " HorizontalAlignment="Left" Margin="329,309,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="468,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tbQuantity" HorizontalAlignment="Left" Height="23" Margin="400,310,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="998,150,-306,0" VerticalAlignment="Top" Width="100"/>
 
 
     </Grid>
