Fixed bug where blank data was displayed in the ComboBox

--- a/Main/wndMain.xaml
+++ b/Main/wndMain.xaml
@@ -10,6 +10,7 @@
         <Menu>
             <MenuItem x:Name="menuSearchInvoice" Header="Search Invoice" HorizontalAlignment="Center" FontSize="14" Click="menuSearchInvoice_Click" BorderBrush="{x:Null}" Background="#FFA5A9FF" HorizontalContentAlignment="Center" />
             <MenuItem x:Name="menuItemListMenu" HorizontalAlignment="Right" Header="Item List" FontSize="14" Click="menuItemListMenu_Click" Background="#FF8085F7" />
+            
 
 
         </Menu>
@@ -18,7 +19,7 @@
         <Button x:Name="btnEditInvoice" Content="Edit Invoice" Margin="42,131,649,235" Click="btnEditInvoice_Click"/>
         <Button x:Name="btnDeleteInvoice" Content="Delete Invoice" Margin="42,206,649,160" Click="btnDeleteInvoice_Click"/>
 
-        <ListBox x:Name="lbItems" HorizontalAlignment="Left" Height="201" Margin="191,57,0,0" VerticalAlignment="Top" Width="427"/>
+        <ListBox x:Name="lbItems" HorizontalAlignment="Left" Height="201" Margin="191,57,0,0" VerticalAlignment="Top" Width="427" SelectionChanged="lbItems_SelectionChanged"/>
         <Label Content="Invoice #: " HorizontalAlignment="Left" Margin="233,18,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblInvoiceNumber" Content="" HorizontalAlignment="Left" Margin="290,18,0,0" VerticalAlignment="Top"/>
         <Label Content="Date: " HorizontalAlignment="Left" Margin="422,18,0,0" VerticalAlignment="Top"/>
@@ -26,12 +27,12 @@
         <Label x:Name="lblInvoiceTotal" Content="" HorizontalAlignment="Left" Margin="710,232,0,0" VerticalAlignment="Top" Width="59"/>
         <Label x:Name="lblPrice" Content="" HorizontalAlignment="Left" Margin="385,278,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnAddItem" Content="Add Item" HorizontalAlignment="Left" Margin="495,285,0,0" VerticalAlignment="Top" Width="123" Height="38" Click="btnAddItem_Click"/>
-        <Button Content="Delete Item" HorizontalAlignment="Left" Margin="638,77,0,0" VerticalAlignment="Top" Width="75" Height="32"/>
-        <Button x:Name="btnSaveInvoice"  Content="Save" HorizontalAlignment="Left" Margin="638,361,0,0" VerticalAlignment="Top" Width="120" Height="32"/>
-        <ComboBox x:Name="cbItems" HorizontalAlignment="Left" Margin="191,278,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbItems_SelectionChanged"/>
+        <Button x:Name="btnDeleteItem" Content="Delete Item" HorizontalAlignment="Left" Margin="638,77,0,0" VerticalAlignment="Top" Width="75" Height="32" Click="btnDeleteItem_Click"/>
+        <Button x:Name="btnSaveInvoice"  Content="Save" HorizontalAlignment="Left" Margin="638,361,0,0" VerticalAlignment="Top" Width="120" Height="32" Click="btnSaveInvoice_Click"/>
+        <ComboBox x:Name="cbItems" HorizontalAlignment="Left" Margin="191,278,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbItems_SelectionChanged" IsSynchronizedWithCurrentItem="False"/>
         <Label Content="Price: " HorizontalAlignment="Left" Margin="329,278,0,0" VerticalAlignment="Top"/>
         <Label Content="Quantity: " HorizontalAlignment="Left" Margin="329,309,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="468,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tbDate" HorizontalAlignment="Left" Height="23" Margin="468,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="tbQuantity" HorizontalAlignment="Left" Height="23" Margin="400,310,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63"/>
         <Label Content="Label" HorizontalAlignment="Left" Margin="998,150,-306,0" VerticalAlignment="Top" Width="100"/>
 
