--- a/Search/wndSearch.xaml
+++ b/Search/wndSearch.xaml
@@ -16,7 +16,7 @@
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <Button x:Name="CancelBtn" Content="Cancel" HorizontalAlignment="Left" Margin="432.8,406,0,0" VerticalAlignment="Top" Width="172" Height="46" FontSize="30" Grid.Column="1">
+        <Button x:Name="CancelBtn" Content="Cancel" HorizontalAlignment="Left" Margin="432.8,406,0,0" VerticalAlignment="Top" Width="172" Height="46" FontSize="30" Grid.Column="1" Click="CancelBtn_Click">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
